--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/jessicapetrochuk/Connect#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.8",
     "mongoose": "^5.9.18"
   }
-  
 }
